--- a/config.yaml
+++ b/config.yaml
@@ -1,14 +1,7 @@
-# stellar parameters i.e defining a local match to be at least 50bp with a maximum of 2 errors
-error_rate: 0.02
-min_length: 50
-
-# raptor parameters
-# nr_errors=3 correspons to a local match defined as length >=60bp with <=3 errors
-nr_errors: 1
+w: 23
 k: 19
-p: 60
-o: 0
-size: 80m
+e: 5
+l: 50
 
 # list of bin names
-bins: ../data/64/sample_bins
+bins: simulated_data/sample_bins
