--- a/MG-1/config.yaml
+++ b/MG-1/config.yaml
@@ -1,10 +1,12 @@
 # list of bin names
-bins: ../simulated_data/dream_numbers
+bins: ../simulated_data/dream_bin_numbers
 
 # parameters of simulated data
-read_error_rate: "3"     # this is NOT the number of allowed errors in an approximate match
+read_error_rate: "5"     # this is NOT the number of allowed errors in an approximate match
 read_length: "150"
 
 # parameters for the search
 kmer_length: 19
-error_rate: 3
+error_rate: 0.01
+bf_size: 1
+nr_hashes: 3
