--- a/MG-R/config.yaml
+++ b/MG-R/config.yaml
@@ -2,9 +2,11 @@
 bins: ../simulated_data/dream_numbers
 
 # parameters of simulated data
-read_error_rate: "3"     # this is NOT the number of allowed errors in an approximate match
+read_error_rate: "5"     # this is NOT the number of allowed errors in an approximate match
 read_length: "150"
 
 # parameters for the search
 kmer_length: 19
-error_rate: 3
+error_rate: 0.01
+bf_size: 1
+nr_hashes: 3
