--- a/MG-2/config.yaml
+++ b/MG-2/config.yaml
@@ -12,15 +12,11 @@ data_out_dir: "/home/evelin/metagenomics/A2-metagenome-snakemake/MG-2/data"
 #  * read length
 #
 #-----------------------------
-ref_size: 67108864       # size of reference in bits 4*2^20 =  64MiB
+
+
+ref_size: 67108864       # size of reference in bytes?? 4*2^20 = 4MiB
 number_of_bins: 64
 read_error_rate: 5       # number of errors; this is NOT the number of allowed errors in an approximate match
 read_length: 150         
 read_count: 65536        # size of query (count)
 haplotype_count: 16
-
-# parameters for the search
-kmer_length: 19
-error_rate: 0.01
-bf_size: 1
-nr_hashes: 3
