--- a/MG-2/Snakefile
+++ b/MG-2/Snakefile
@@ -13,10 +13,18 @@ rl = config["read_length"]
 rc = config["read_count"]
 ht = config["haplotype_count"]
 
+# Helper variables
+digits = len(str(bin_nr))
+padding = "".zfill(digits)
 
-# Creating simulated data
-import subprocess
-subprocess.call(['bash', './scripts/simulate.sh', str(bin_dir), str(out_dir), str(size), str(bin_nr), str(rer), str(rl), str(rc), str(ht)])
+# Checking if data was already simulated
+import os.path
+if os.path.isfile("data/" + str(bin_nr) + "/bins/bin_" + padding + ".fasta"):
+    print ("Skipping data simulation.")
+else:
+    # Creating simulated data
+    import subprocess
+    subprocess.call(['bash', './scripts/simulate.sh', str(bin_dir), str(out_dir), str(size), str(bin_nr), str(rer), str(rl), str(rc), str(ht)])
 
 # Creating list of wildcards
 bin_nr = config["number_of_bins"]
