[FIX] check if .fastq exists and skip data simulation

--- a/MG-2/Snakefile
+++ b/MG-2/Snakefile
@@ -19,7 +19,7 @@ padding = "".zfill(digits)
 
 # Checking if data was already simulated
 import os.path
-if os.path.isfile("data/" + str(bin_nr) + "/bins/bin_" + padding + ".fasta"):
+if os.path.isfile("data/" + str(bin_nr) + "/reads_e" + str(rer) + "_" + str(rl) + "/bin_" + padding + ".fastq"):
     print ("Skipping data simulation.")
 else:
     # Creating simulated data
