--- a/simulation_config.yaml
+++ b/simulation_config.yaml
@@ -1,7 +1,7 @@
 # location of raptor binaries
 raptor_bin_dir: "/home/evelin/metagenomics/raptor_data_simulation/build/bin"
 # location of simulated data
-data_out_dir: "/home/evelin/metagenomics/A2-metagenome-snakemake/MG-1/data"
+data_out_dir: "/home/evelin/metagenomics/A2-metagenome-snakemake/data"
 
 #-----------------------------
 # Parameters of simulated data
@@ -16,18 +16,7 @@ data_out_dir: "/home/evelin/metagenomics/A2-metagenome-snakemake/MG-1/data"
 
 ref_size: 1048576        # size of reference in bytes? 4*2^20 = 4MiB
 number_of_bins: 1024
-read_error_rate: 5       # number of errors; this is NOT the number of allowed errors in an approximate match
+errors_per_read: 5       # number of errors; this is NOT the number of allowed errors in an approximate match
 read_length: 150
 read_count: 65536        # size of query (count)
-haplotype_count: 1
-
-
-#-----------------------------
-# Parameters for the search
-#-----------------------------
-
-
-kmer_length: 19
-error_rate: 0.01
-bf_size: 1
-nr_hashes: 3
+haplotype_count: 4
