--- a/MG-1/Snakefile
+++ b/MG-1/Snakefile
@@ -11,7 +11,7 @@ bin_list = [str(i) for i in list(range(0,bin_nr))]
 
 rule make_all:
 	input:
-		expand("mapped_reads/{bin}.bam", bin = bin_list)
+		expand("mapped_reads/all.bam", bin = bin_list)
 	shell:
 		"echo 'Done'"
 
