--- a/MG-2/search_config.yaml
+++ b/MG-2/search_config.yaml
@@ -5,7 +5,7 @@
 #-----------------------------
 
 kmer_length: 10    # should be 9 < k < 13
-errors: 4
+allowed_errors: 4
 
 #-----------------------------
 #
@@ -13,4 +13,4 @@ errors: 4
 #
 #-----------------------------
 
-error_rate: 0.01
+error_percentage: 2
