--- a/MG-2/Snakefile
+++ b/MG-2/Snakefile
@@ -11,9 +11,10 @@ bin_list = [str(i) for i in list(range(0,bin_nr))]
 
 rule make_all:
 	input:
-                expand("mapped_reads/{bin}.bam", bin = bin_list)
+                "mapped_reads/idxstats.out"
 	shell:
 		"echo 'Done'"
 
 include: "rules/prefiltering.smk"
 include: "rules/mapping.smk"
+include: "rules/gathering.smk"
