[FEATURE] convert to .sam and create breakpoint files

--- a/MG-1/search_config.yaml
+++ b/MG-1/search_config.yaml
@@ -2,6 +2,7 @@
 # Parameters for the search
 #-----------------------------
 
+allowed_errors: 10
 kmer_length: 19
 bf_size: 1      # in GB; min 1GB
 nr_hashes: 3
