--- a/MG-2/search_config.yaml
+++ b/MG-2/search_config.yaml
@@ -12,4 +12,5 @@ kmer_length: 10    # should be 9 < k < 13
 #
 #-----------------------------
 
-allowed_errors: 5
+allowed_errors: 5       # corresponds to all mapping
+strata_width: 5         # corresponds to strata (best+x) mapping
