--- a/MG-1/search_config.yaml
+++ b/MG-1/search_config.yaml
@@ -2,7 +2,8 @@
 # Parameters for the search
 #-----------------------------
 
-allowed_errors: 10
+allowed_errors: 5
+strata_percentage: 2
 kmer_length: 19
 bf_size: 1      # in GB; min 1GB
 nr_hashes: 3
