--- a/MG-2/search_config.yaml
+++ b/MG-2/search_config.yaml
@@ -13,4 +13,4 @@ kmer_length: 10    # should be 9 < k < 13
 #-----------------------------
 
 allowed_errors: 5       # corresponds to all mapping
-strata_width: 5         # corresponds to strata (best+x) mapping
+strata_count: 3         # corresponds to strata (best+x) mapping
