Create MG-4 to split reads into a chosen number of bins (#16)
* Add data simulation for MG-4

* Fix splitting read file into equal parts

* Map reads from custom number of files

--- a/simulation_config.yaml
+++ b/simulation_config.yaml
@@ -6,7 +6,8 @@
 #wf: "MG-R"
 #wf: "MG-1"
 #wf: "MG-2"
-wf: "MG-3"
+#wf: "MG-3"
+wf: "MG-4"
 
 # location of raptor binaries
 raptor_bin_dir: "/home/evelin/metagenomics/raptor_data_simulation/build/bin"
@@ -41,4 +42,15 @@ snp_rate: 0.01
 small_indel_rate: 0.001
 
 # boolean variable to divide similar haplotypes between different bins
-mix_bins: 1
+mix_bins: 1     # NOT relevant for MG-4
+
+#-----------------------------
+# Customizing the number of read files in MG-4
+#
+# For the other workflows nr of read files == nr of bins
+#
+# Note that it must hold that (read_count % read_file_count) == 0
+#-----------------------------
+
+read_file_count: 4
+
