--- a/simulation_config.yaml
+++ b/simulation_config.yaml
@@ -1,18 +1,7 @@
-#-----------------------------
-# Choose which workflow to generate data for.
-# One at a time. 
-#-----------------------------
-
-#wf: "MG-R"
-#wf: "MG-1"
-#wf: "MG-2"
-#wf: "MG-3"
-wf: "MG-4"
-
 # location of raptor binaries
-raptor_bin_dir: "/home/evelin/metagenomics/raptor_data_simulation/build/bin"
+raptor_bin_dir: "/home/evelia95/raptor_data_simulation/build/bin"
 # location of simulated data
-data_out_dir: "/home/evelin/metagenomics/A2-metagenome-snakemake/data"
+data_out_dir: "/home/evelia95/NO_BACKUP/simulated_metagenome"
 
 #-----------------------------
 # Parameters of simulated data.
@@ -42,15 +31,4 @@ snp_rate: 0.01
 small_indel_rate: 0.001
 
 # boolean variable to divide similar haplotypes between different bins
-mix_bins: 1     # NOT relevant for MG-4
-
-#-----------------------------
-# Customizing the number of read files in MG-4
-#
-# For the other workflows nr of read files == nr of bins
-#
-# Note that it must hold that (read_count % read_file_count) == 0
-#-----------------------------
-
-read_file_count: 4
-
+mix_bins: 1
