--- a/simulation_config.yaml
+++ b/simulation_config.yaml
@@ -13,11 +13,11 @@ data_out_dir: "/home/evelia95/NO_BACKUP/simulated_metagenome"
 #
 #-----------------------------
 
-ref_size: 102400        # size of reference in bytes? 4*2^20 = 4MiB
-number_of_bins: 8
-errors_per_read: 5       # number of errors; this is the basis for error rate in an approximate match
+ref_size: 375809638400    # size of reference in bytes? 350*2^30 = 350GiB
+number_of_bins: 1024
+errors_per_read: 5     # number of errors; this is the basis for error rate in an approximate match
 read_length: 150
-read_count: 1024        # size of query (count)
+reads_per_genome: 10000        # 10000 * nr_bins * haplotype_count = query_size
 
 #-----------------------------
 # Mason variator parameters.
