--- a/raptor_data_simulation/Snakefile
+++ b/raptor_data_simulation/Snakefile
@@ -1,3 +1,6 @@
+import subprocess
+import os.path
+
 # All parameters are set in config.yaml
 configfile: "../simulation_config.yaml"
 
@@ -5,61 +8,68 @@ configfile: "../simulation_config.yaml"
 bin_dir = config["raptor_bin_dir"]
 out_dir = config["data_out_dir"]
 
-size = config["ref_size"]
+# Simulating reference
+part_nr = config["reference_parts"]
+length = config["ref_size"]
 bin_nr = config["number_of_bins"]
+ht = config["haplotype_count"]
+
+# Simulating reads
 epr = config["errors_per_read"]
 rl = config["read_length"]
 rpg = config["reads_per_genome"]
-
-# Parameters for mason variator
-ht = config["haplotype_count"]
-sr = config["snp_rate"]
-ir = config["small_indel_rate"]
 
 # An equal number of reads is sampled from each genome
 rc = rpg * ht * bin_nr
 
 # Helper variables
-digits = len(str(bin_nr))
-padding = "".zfill(digits)
 bins = [*range(0, bin_nr - 1, 1)]
-
-rule simulate:		
-	output:
-		bins = expand("{out}/{nr}/bins/{bin}.fasta", bin=bins, out=out_dir, nr=bin_nr),
-		reads = expand("{out}/{nr}/reads_e{e}_{l}/{bin}.fastq", bin=bins, out=out_dir, nr=bin_nr, e=epr, l=rl)
-	params: 
-		t = 8
-	resources:
-		nodelist = "cmp[230]"
-	run:
-		# Checking if data was already simulated
-		import os.path
-		if os.path.isfile(str(out_dir) + "/" + str(bin_nr) + "/reads_e" + str(epr) + "_" + str(rl) + "/0.fastq"):
-			print ("Skipping data simulation.")
-		else:
-			# Creating simulated data
-			import subprocess
-			subprocess.call(['bash', './scripts/simulate.sh', bin_dir, out_dir, str(size), str(bin_nr), str(epr), str(rl), str(rc), str(ht), str(sr), str(ir)])
-
-			# Renaming bin files; the filenames must have a specific format e.g 4.fasta not 04.fasta
-    			subprocess.call(['bash', './scripts/rename_fasta.sh', out_dir, str(bin_nr), padding])
-
-			# Renaming read files
-			subprocess.call(['bash', './scripts/rename_fastq.sh', out_dir, str(bin_nr), str(epr), str(rl), padding])
-
-			# Simulate a situation where different bins contain similar sequences.
-    			# Some reads will align to multiple bins.
-    			if (config["mix_bins"]==1):
-				subprocess.call(['bash', './scripts/mix_bins.sh', out_dir, str(bin_nr)])
+parts =[*range(0, part_nr, 1)]
 
 rule make_all:
 	input:
-		bins = expand("{out}/{nr}/bins/{bin}.fasta", bin=bins, out=out_dir, nr=bin_nr),
-		reads = expand("{out}/{nr}/reads_e{e}_{l}/{bin}.fastq", bin = bins, out=out_dir, nr=bin_nr, e=epr, l=rl)	
+		reads = expand("{out}/part_{part}/reads/{bin}.fastq", out=out_dir, part=parts, bin=bins)
+#expand("{out}/part_{part}/ref.fasta", out=out_dir, part=parts)
 	params:
 		t = 1
 	resources:
 		nodelist = "cmp[227]"
 	shell:
 		"echo 'Done'"
+
+rule create_ref:		
+	output:
+		"{out}/part_{part}/ref.fasta"
+	params:
+		t = 11
+	resources:
+		nodelist = "cmp[241]"
+	shell:
+		"./scripts/create_ref.sh {bin_dir} {out_dir} {length} {wildcards.part}"
+
+rule divide_into_bins:		
+	input:
+		"{out}/part_{part}/ref.fasta"
+	output:
+		expand("{out}/part_{part}/bins/{bin}.fasta", out=out_dir, part=parts, bin=bins)
+	params:
+		t = 2
+	resources:
+		nodelist = "cmp[241]"
+	shell:
+		"./scripts/divide_into_bins.sh {bin_dir} {out_dir} {length} {wildcard.part} {bin_nr} {ht}"
+
+rule sample_reads:
+	input:
+		"{out}/part_{part}/bins/{bin}.fasta"
+	output:
+		"{out}/part_{part}/reads/{bin}.fastq"
+	params:
+		t = 40
+	resources:
+		nodelist = "cmp[241]"
+	shell:
+		"""
+		./scripts/sample_reads.sh {bin_dir} {out_dir} {wildcard.part} {bin_nr} {epr} {rl} {rc} {ht}
+		./scripts/mix_bins.sh {out_dir} {wildcard.part}
+		"""
