--- a/simulation_config.yaml
+++ b/simulation_config.yaml
@@ -12,13 +12,14 @@ data_out_dir: "/home/evelia95/NO_BACKUP/simulated_metagenome"
 #  * read length
 #
 #-----------------------------
-
-reference_parts: 10 
-ref_size: 20971520    # size of reference in bytes? 350*2^30 = 350GiB
-number_of_bins: 10
-errors_per_read: 5     # number of errors; this is the basis for error rate in an approximate match
+ 
+#ref_size: 343597383680    # size of reference in bytes? 320*2^30 = 350GiB
+ref_size: 85899345920    # size of reference in bytes? 80*2^30 = 80GiB
+number_of_bins: 1024
+errors_per_read: 3     # number of errors; this is the basis for error rate in an approximate match
 read_length: 150
-reads_per_genome: 1000        # 10000 * nr_bins * haplotype_count = query_size
+# create a total of 4 million reads
+reads_per_genome: 10000      # 10000 * nr_bins * haplotype_count = query_size
 
 #-----------------------------
 # Mason variator parameters.
