--- a/MG-1/Snakefile
+++ b/MG-1/Snakefile
@@ -11,7 +11,12 @@ bin_list = [str(i) for i in list(range(0,bin_nr))]
 
 rule make_all:
 	input:
-		"mapped_reads/all_sorted.sam"
+		"{params.dir}/mapped_reads/all_sorted.sam"
+	params:
+		t = 1,
+		dir = "../../NO_BACKUP/simulated_metagenome/MG1"
+	resources:
+		nodelist = "cmp[241]"
 	shell:
 		"echo 'Done'"
 
