--- a/MG-3/Snakefile
+++ b/MG-3/Snakefile
@@ -9,16 +9,17 @@ rl = config["read_length"]
 # Creating list of wildcards
 bin_list = [str(i) for i in list(range(0,bin_nr))]
 
+workdir: "/home/evelia95/NO_BACKUP/simulated_metagenome/MG3"
+
 rule make_all:
 	input:
-		"{params.dir}/mapped_reads/all_sorted.sam"
+		"mapped_reads/all_sorted.sam"
 	params:
 		t = 1,
-		dir = "../../NO_BACKUP/simulated_metagenome/MG3"
 	resources:
 		nodelist = "cmp[227]"
 	benchmark:
-		"{params.dir}/benchmarks/all.txt"
+		"benchmarks/all.txt"
 	shell:
 		"echo 'Done'"
 
