--- a/MG-1/Snakefile
+++ b/MG-1/Snakefile
@@ -9,7 +9,7 @@ rl = config["read_length"]
 # Creating list of wildcards
 bin_list = [str(i) for i in list(range(0,bin_nr))]
 
-workdir: "../../NO_BACKUP/simulated_metagenome/MG1"
+workdir: "/nfs/buffer/ag_abi/eaasna/allegro/MG1"
 
 rule make_all:
 	input:
