--- a/MG-1/Snakefile
+++ b/MG-1/Snakefile
@@ -6,10 +6,10 @@ bin_nr = config["number_of_bins"]
 epr = config["errors_per_read"]
 rl = config["read_length"]
 
+workdir: "../../allegro/MG1"
+
 # Creating list of wildcards
 bin_list = [str(i) for i in list(range(0,bin_nr))]
-
-workdir: "/nfs/buffer/ag_abi/eaasna/allegro/MG1"
 
 rule make_all:
 	input:
